it compiles now. it just doesn't modify the linked list it sorts